@@ -1,0 +1,6 @@
+---
+body: ~
+param:
+  one: foo
+  two: bar=bam
+upload: {}
